2001-09-14 Friday 00:54  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.45), include/thai/thwchar.h (1.7),
	src/thwchar/Makefile.am (1.2), src/thwchar/hashtbl.c (1.1),
	src/thwchar/hashtbl.h (1.1), src/thwchar/thwchar.c (1.5): Implement
	uni2winthai(), uni2macthai() with hash table added in hashtbl.[ch].

2001-08-22 Wednesday 11:41  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.44), include/thai/wtt.h (1.2), src/thcell/thcell.c
	(1.6), src/thctype/wtt.c (1.2), src/thinp/thinp.c (1.8),
	src/thrend/thrend.c (1.10), src/thstr/thstr.c (1.3),
	src/thwchar/thwchar.c (1.4): Add comments. Check naming convention.
	Refine coding style.

2001-08-14 Tuesday 13:18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.43), NEWS (1.5) (utags: r0_1_1): Release Version
	0.1.1.

2001-08-14 Tuesday 13:16  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.42): Prepare to release Version 0.1.1.

2001-08-14 Tuesday 13:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac (1.3): Remove configure.ac.

2001-08-14 Tuesday 13:11  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in (1.15), include/thai/thctype.h (1.8), src/dummy.c
	(1.2), src/thbrk/dict2state.c (1.3), src/thcoll/cweight.c (1.3),
	src/thcoll/cweight.h (1.3), src/thinp/thinp.c (1.7),
	src/thstr/thstr.c (1.2) (utags: r0_1_1): Require autoconf 2.50. Add
	--enable-ansi and --enable-debug flags.  Turn on all warnings. Fix
	warnings.

2001-08-13 Monday 13:07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.41), NEWS (1.4), README (1.6, r0_1_1), TODO (1.2,
	r0_1_1), configure.ac (1.2), configure.in (1.14): Version 0.1.1

2001-08-10 Friday 18:09  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.40), src/thrend/thrend.c (1.9, r0_1_1): Merge
	special case of NIKHAHIT with tone/ad in general.

2001-08-10 Friday 18:07  Theppitak Karoonboonyanan  <thep@linux.thai.net>
