@@ -1,9 +1,9 @@
-# $Id: Makefile.am,v 1.2 2001-09-13 17:54:29 thep Exp $
+# $Id: Makefile.am,v 1.3 2001-09-14 14:05:09 thep Exp $
 MAINTAINERCLEANFILES = Makefile.in
 
 INCLUDES = -I. -I$(top_srcdir)/include
 
 noinst_LTLIBRARIES = libthwchar.la
 
-libthwchar_la_SOURCES = thwchar.c hashtbl.c
+libthwchar_la_SOURCES = thwchar.c
 
