@@ -1,3 +1,8 @@
+2001-09-14 Friday 20:48  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* ChangeLog (1.46), include/thai/thwchar.h (1.8),
+	src/thwchar/thwchar.c (1.6): Use lazy creation for hash tables.
+
 2001-09-14 Friday 00:54  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* ChangeLog (1.45), include/thai/thwchar.h (1.7),
@@ -561,13 +566,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.46 2001-09-14 13:48:40 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.47 2001-09-14 14:05:09 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.46 2001-09-14 13:48:40 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.47 2001-09-14 14:05:09 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
